2004-10-28  Vincent Noel  <vnoel@cox.net>

	* logview-findbar.c (logview_findbar_populate): Add a spacer tool
	item so the close button is at the right end of the find bar.
	(logview_findbar_populate): Add labels to the previous/next buttons.

	* logview.c (logview_search): Hook up the new find bar.

	* logview-findbar.h: 
	* logview-findbar.c: new. Add a Firefox-esque find
	bar. Shamelessly stolen and adapted from Yelp.

	* gedit-output-window.c: 
	* gedit-output-window.h:
	* logview-search.h: 
	* logview-search.c: 
	* logview-search-dialog.h: 
	* logview-search-dialog.c: Remove the short-lived gedit-like
	search function.

	* logrtns.h: Remove a bunch of useless #include's.

	* info.c : Remove useless #include's.

	* misc.c (MakeErrorDialog): Port from gnome_message_box_new to
	gtk_message_dialog_new.

	* logview.c (logview_help): Use a convenience error function.

	* logrtns.c: Remove prototype.

	* logview.h: 
	* log_repaint.c: 
	* monitor.c: Remove useless #define's and #include's.	

	* about.c (AboutShowWindow): use the very convenient
	gtk_about_show_dialog.
	(AboutShowWindow): Add a bunch of authors.

	* monitor.c (mon_check_logs):
	* info.c: Remove unnecessary casts.

	* logview.c (logview_help): Handle errors when displaying help,
	display it on the right screen.

	* about.c (AboutShowWindow): Port to gtk_about_dialog.

	* logview.c (main): Use gtk_window_set_default_icon_name.

2004-10-27  Vincent Noel  <vnoel@cox.net>

	* zoom.c (repaint_zoom): Fixes issues brought up by multiple windows.

	* log_repaint.c: Remove the save_rows_to_expand function which is
	now useless.

	* logview.c (CloseLogMenu): Fixes issues with menu items state.

	* calendar.c: Remove unused global variables.

	* logview.c: Use the GTK_STOCK_PROPERTIES icon.

	* monitor.c: Major rewrite. Now any opened log can be monitored by
	toggling the "monitor" check menu item.

	* logview.c: Allow the opening of new windows. Remove the "Switch